Complete home pages

--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Grace Tsai's Home Page</title>
-	<link href='/assets/stylesheets/index.css' rel="stylesheet" media="all">
+	<link href='assets/stylesheets/index.css' rel="stylesheet" media="all">
 </head>
 <body>
-	<p>Hello World!</p>
+	<div id="page">
+		<div id="header">
+			<h1>Grace Tsai's Home Page</h1>
+			<h3>Homework, notes, and more</h3>
+		</div>
+		<div id="nav">
+			<ul class="nav-entry">
+				<li><a href='index.html'>Home</a></li>
+				<li><a href='archieve/showcase.html'>Showcase</a></li>
+				<li><a href='archieve/archieve.html'>Blog</a></li>
+				<li><a href='archieve/about.html'>About</a></li>
+			</ul>
+		</div>
+
+		<div class="article-list">
+			<h2 class="article-ref">Recent</h2>
+			<ul class="article-list-entry">
+				<li><a href='archieve/articles/00003.html'>07/07/2015</a></li>
+				<li><a href='archieve/articles/00002.html'>Homework will be released here</a></li>
+				<li><a href='archieve/articles/00001.html'>Hello world!</a></li>
+			</ul>
+		</div>
+	</div>
 </body>
