--- a/archieve/about.html
+++ b/archieve/about.html
@@ -25,7 +25,7 @@
 			<div class='floatimg'><img src='../assets/img/avatar.jpg' style='width:200px'/></div>
 			<p>
 				I'm Grace Tsai from Tsinghua University school of software. <br>
-				The page created for 2015 summer course homework.
+				Through 2015 summer course I'm learning to create beautiful web pages.
 			</p>
 		</div>
 	</div>
